--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
       - "9090:9090"
+    networks:
+      - monitoring
 
   grafana:
     image: grafana/grafana
@@ -12,6 +14,8 @@ services:
       - "3000:3000"
     depends_on:
       - prometheus
+    networks:
+      - monitoring
 
   postgres:
     image: postgres
@@ -21,4 +25,8 @@ services:
       POSTGRES_DB: taskdb
     ports:
       - "5432:5432"
+    networks:
+      - monitoring
 
+networks:
+  monitoring:
