--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -1,8 +1,13 @@
+global:
+  scrape_interval: 15s
+
 scrape_configs:
   - job_name: 'producer'
     static_configs:
-      - targets: ['host.docker.internal:8080']
+      - targets: ['producer:8080']  # Change this to the correct address and port
 
   - job_name: 'consumer'
     static_configs:
-      - targets: ['host.docker.internal:8081']
+      - targets: ['consumer:8081']  # Change this to the correct address and port
+
+
