--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -1,13 +1,7 @@
-global:
-  scrape_interval: 15s
-
 scrape_configs:
   - job_name: 'producer'
     static_configs:
-      - targets: ['producer:8080']  # Change this to the correct address and port
-
+      - targets: ['host.docker.internal:8080']
   - job_name: 'consumer'
     static_configs:
-      - targets: ['consumer:8081']  # Change this to the correct address and port
-
-
+      - targets: ['host.docker.internal:8081']
