--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -1,16 +1,21 @@
 services:
   prometheus:
     image: prom/prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
       - "9090:9090"
-      
+    networks:
+      - monitoring
+
   grafana:
     image: grafana/grafana
     ports:
       - "3000:3000"
     depends_on:
       - prometheus
-
+    networks:
+      - monitoring
 
   postgres:
     image: postgres
@@ -20,5 +25,8 @@ services:
       POSTGRES_DB: taskdb
     ports:
       - "5432:5432"
+    networks:
+      - monitoring
 
-
+networks:
+  monitoring:
